Fix slight alignment issue for ng-select singleselect

--- a/src/assets/css/classes.scss
+++ b/src/assets/css/classes.scss
@@ -542,9 +542,9 @@ button.mat-icon-button .mat-button-wrapper .mat-icon {
 }
 
 
-.single-select .ng-select-container .ng-value-container .ng-value .ng-value-label{
+.single-select .ng-select-container .ng-value-container .ng-input input{
     position: relative;
-    top: 4px;
+    bottom: 4px;
 }
 
 .ng-select.multiple-select .ng-select-container .ng-value-container .ng-value {
